two rest end points added
