# data-service-backend/src/main/java/ch/akros/marketplace/controller/SaveTopicController.java
@@ -1,0 +1,33 @@
+package ch.akros.marketplace.controller;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.RestController;
+
+import ch.akros.marketplace.api.SaveTopicApi;
+import ch.akros.marketplace.api.model.TopicStoreDTO;
+import ch.akros.marketplace.service.TopicService;
+import lombok.extern.slf4j.Slf4j;
+
+@RestController
+@CrossOrigin(origins = "*", allowedHeaders = "*")
+@Slf4j
+public class SaveTopicController implements SaveTopicApi {
+	@Autowired
+	private TopicService topicService;
+
+	@Override
+	public ResponseEntity<Void> saveTopicPost(TopicStoreDTO topicStoreDTO) {
+		try {
+			log.debug("SaveTopicController.saveTopicPost() called");
+
+			topicService.storeTopic(topicStoreDTO);
+			return ResponseEntity.status(HttpStatus.OK).body(null);
+		} catch (Exception ex) {
+			log.error(ex.getMessage(), ex);
+			return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
+		}
+	}
+}
