# data-service-backend/src/main/java/ch/akros/marketplace/entity/Topic.java
@@ -1,6 +1,7 @@
 package ch.akros.marketplace.entity;
 
-import java.util.Date;
+import java.time.LocalDate;
+import java.util.List;
 
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
@@ -12,6 +13,7 @@ import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import javax.persistence.JoinColumn;
 import javax.persistence.ManyToOne;
+import javax.persistence.OneToMany;
 import javax.persistence.Table;
 
 import lombok.AccessLevel;
@@ -47,8 +49,14 @@ public class Topic {
 	private Theme theme;
 
 	@Column(name = "VALID_FROM")
-	private Date validFrom;
+	private LocalDate validFrom;
 
 	@Column(name = "VALID_TO")
-	private Date validTo;
+	private LocalDate validTo;
+
+	@OneToMany(mappedBy = "topicValueId", cascade = CascadeType.ALL)
+	private List<TopicValue> topicValues;
+
+	@Column(name = "SEARCH_OR_OFFER")
+	private String searchOrOffer;
 }
